--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,16 @@ h1 {
 }
 
 button {
-    display: block;
-    margin: 20px auto;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.activeButton {
+    background-color: grey;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
 }
